# github-stars-monitor

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
dashboard/: evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: +layout.svelte  index.md
dashboard/sources/github/: connection.yaml  dlt.sql  github.duckdb  repositories.sql  stars.sql
ingestion/: github.py
transform/: dbt_project.yml  profiles.yml
transform/models/: sources.yml
transform/models/marts/: models.yml  repositories.sql  stars.sql
transform/models/staging/: schema.yml  stg_repositories.sql  stg_stargazers.sql
transform/tests/: stars.sql
