[project]
name = "github-stars-monitor"
version = "0.1.0"
description = "Collect stars from recently created repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.10.11",
    "dbt-duckdb>=1.9.6",
    "dlt[duckdb]>=1.16.0",
    "fire>=0.7.1",
    "pre-commit>=4.3.0",
]
