[project]
name = "github-stars-monitor"
version = "0.1.0"
description = "Collect stars from recently created repositories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "dlt[duckdb]>=1.25.0",
    "fire>=0.7.1",
    "pre-commit>=4.5.1",
]
